#Change PROJECT_NAME to the name of your project
PROJECT(DynamicFMIndex-library CXX)
MESSAGE("PROJECT_NAME: 	" ${PROJECT_NAME})

#SET(CMAKE_BUILD_TYPE Release)
#IF (${CMAKE_BUILD_TYPE} STREQUAL "")
#	SET(CMAKE_BUILD_TYPE Release)
#ENDIF(${CMAKE_BUILD_TYPE} STREQUAL "")

SET(SAMPLE
	1024 CACHE STRING DOCSTRING)
SET(BUFFER
	1048576 CACHE STRING DOCSTRING)
SET(LOGN
	64 CACHE STRING DOCSTRING)
#SET(NDEBUG
#	ON CACHE BOOL DOCSTRING)


ADD_DEFINITIONS(-DSAMPLE=${SAMPLE} -DBUFFER=${BUFFER} -DLOGN=${LOGN})
MESSAGE(STATUS
	"SAMPLE:	" ${SAMPLE})
MESSAGE(STATUS
	"BUFFER:	" ${BUFFER})
MESSAGE(STATUS
	"LOGN:	" ${LOGN})
MESSAGE(STATUS
	"NDEBUG:	" ${NDEBUG})



SET(SOURCES "")
#ADD_SUBDIRECTORY(src)
#INCLUDE_DIRECTORIES(src)
AUX_SOURCE_DIRECTORY(src SOURCES)

#SET(SOURCES_READ ${SOURCESX})
#SEPARATE_ARGUMENTS(SOURCES_READ)

MESSAGE("SOURCES: " ${SOURCES})

ADD_LIBRARY(dynfmi STATIC ${SOURCES})

#ADD_LIBRARY(dynfmi STATIC bvtree.cpp src/dynFMI.cpp src/handle.cpp src/pos.cpp src/rbtree.cpp src/ssatree.cpp)

